Fix color-surface dark mode

--- a/setup/react/app/variables.css
+++ b/setup/react/app/variables.css
@@ -282,7 +282,7 @@ or "warn/action" ineastd of "red/green"
   --box-shadow-standard: 0 2px 4px 0 rgba(6, 22, 48, 0.06);
   --box-shadow-word-option: 0 0 1px 0 #fff;
   --color-dialog-bg: rgba(28, 28, 30, 0.8);
-  --color-surface: rgb(var(--color-eerie));
+  --color-surface: var(--color-eerie);
   --color-surface-1: rgb(0, 0, 0);
   --color-surface-blue: #fff;
   --color-body-bg: var(--color-surface-1);
